--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @charset "UFT-8";
-
+@font-face {
+    font-family: 'Fontelogo';
+    src: url("_fonts/Jost/Jost-Italic-VariableFont_wght.ttf");
+}
 #Simb {
     font-family: arial;
     font-size: 25px;
@@ -9,7 +12,9 @@
 }
 
 body {
-    color: black
+    font-family: arial, sans-serif;
+    color: black;
+    background-color: rgba(0,0,0,.1);
 }
 
 div#interface{
@@ -26,6 +31,15 @@ p {
     
 }
 
+a {
+    color: #606060;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 header#cabecalho img#icone {
     position: absolute;
     left: 900px;
@@ -40,7 +54,7 @@ header#cabecalho {
 }
 
 header#cabecalho h1 {
-    font-family: arial, sans-serif;
+    font-family: 'Fontelogo', sans-serif;
     font-size: 30pt;
     color: #606060;
     text-align: left;
@@ -63,17 +77,17 @@ header#cabecalho h2{
 
 
 
-
-
 /* fORMATAÇÃO DE IMAGENS */
 
 figure.foto-legenda {
 
         border: 8px solid white;
         box-shadow: 1px 1px 4px black;
-        width: 400px;
-        height: 600px;
-        position: relative;  
+        width: 350px;
+        height: 500px;
+        position: relative;
+        margin: 0px;
+          
 }
 
 figure.foto-legenda img {
@@ -111,8 +125,8 @@ figure.foto-legenda:hover figcaption{
 }
 
 figure.foto-legenda:hover {
-    width: 416px;
-    height: 616px;
+    width: 350px;
+    height: 530px;
     
 }
 
@@ -156,6 +170,136 @@ nav#menu a:hover {
     text-decoration: underline;
 }
 
+
+
+/* Tabela */
+
+tabela#tabelaspec {
+    border: 1px solid black;
+    border-spacing: 0px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+table#tabelaspec td {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+table#tabelaspec td.ce {
+    color: #fff;
+    background-color: #606060;
+    vertical-align: top;
+    font-weight: bold;
+}
+
+table#tabelaspec td.cd {
+    background-color: #cecece;
+}
+
+table#tabelaspec caption {
+    color: #888888;
+    font-size: 16pt;
+    font-weight: bolder;
+    background-color: white;
+}
+
+table#tabelaspec caption span {
+    display: block;
+    float: right;
+    color: #888888;
+    font-size: 8px;
+    margin-top: 10px;
+}
+
+
+
+/* Section | Asside | Footer */
+
+
+section#corpo {
+    display: block;
+    width: 400px;
+    float: left;
+    border-right: 1px solid #606060;
+    padding-right: 20px;
+    padding-right: 20px;
+}
+
+header#cabecalho-artigo h1{
+    font-family: 'FonteLogo';
+    font-size: 25pt;
+    color: black;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    
+
+}
+
+header#cabecalho-artigo h2 {
+    font-size: 10pt !important;
+    background-color: black !important;
+    color: white !important;
+    margin-bottom: 0px;
+}
+
+header#cabecalho-artigo h3{
+    font-size: 12px;
+    color: #606060;
+    
+}
+article#noticia-principal h2 {
+    font-size: 12pt;
+    color: black;
+    background-color: white;
+    padding: 5px 0px 5px 10px;
+    margin: 10px 0px 10px 0px;
+
+}
+
+.direita {
+    text-align: right;
+}
+
+aside#lateral {
+    display: block;
+    width: 400px;
+    float: right;
+    background-color: antiquewhite;
+    padding: 10px 35px 10px 35px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+    text-align: center;
+
+
+}
+
+aside#lateral h1 {
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 12pt;
+    color: #606060;
+}
+
+aside#lateral h2 {
+    background-color: white;
+    font-size: 12pt;
+    padding: 1px;
+    font-family: 'FonteLogo', sans-serif;
+}
+
+footer#rodape {
+    clear: both;
+    border-top: 1px solid #606060;
+}
+
+footer#rodape p {
+    text-align: center;
+}
+
+
+
 /* Fale Conosco.html*/
 
 .Fale-conosco-pagina2 {
@@ -165,7 +309,21 @@ nav#menu a:hover {
 
 }
 
-.formulario{
-    width: 50%;
-    height: 50%;
+fieldset#formulario{
+    width: 730px;
+    height: 100%;
+    padding: 10px;
+    margin: 10px auto 10px 0px;
+    border: 2px solid gray;
+    box-shadow: 1px 1px 1px 1px black;
+}
+
+fieldset#formulario label {
+    color: green;
+    font-family: 'Fontelogo';
+    text-shadow: 1px 1px 1px 1px black;
+}
+.Tabela{
+    width: 70px; 
+    height: 100px;
 }
